feat(tablet-session): initialize and manage tablet sessions for Schusszettel workflow
- Added full initialization logic for tablet sessions at Wettkampf start
  - Created one session per team in the Wettkampf
  - Auto-generated unique tokens using UUID
  - Set initial status to SCHUETZENMELDUNG and match/passe metadata
  - Dynamically resolved and assigned opponent team IDs from MatchDO

- Introduced handling of currentMatchNumber in TabletSessionEntity and DAO
  - Added corresponding DB column if not already present
  - Updated DAO to read/write currentMatchNumber using QueryBuilder

- Implemented robust shooter submission logic:
  - Validates shooter membership
  - Writes 6-arrow PasseDO entries per shooter
  - Updates existing passes if already present

- Ensured all SQL operations use QueryBuilder (no raw JDBC)
- Fixed bean conflict between duplicate TabletSessionDAO classes by renaming or scoping

BREAKING CHANGE:
Refactored DAO structure may require migration of old tablet session logic and cleanup of redundant TabletSessionDAO classes. (if you were in this dev branch before, else it doesnt matter)