@@ -3,8 +3,8 @@ package de.bogenliga.application.business.schusszettel.impl.business;
 import de.bogenliga.application.business.schusszettel.api.TabletSchusszettelComponent;
 import de.bogenliga.application.business.schusszettel.api.types.*;
 import de.bogenliga.application.business.schusszettel.api.types.inside.*;
-import de.bogenliga.application.business.schusszettel.impl.dao.TabletSessionDAO;
-import de.bogenliga.application.business.schusszettel.impl.entity.TabletSessionEntity;
+import de.bogenliga.application.business.schusszettel.impl.dao.TabletSchusszettelDAO;
+import de.bogenliga.application.business.schusszettel.impl.entity.TabletSchusszettelEntity;
 import de.bogenliga.application.business.passe.api.PasseComponent;
 import de.bogenliga.application.business.passe.api.types.PasseDO;
 import de.bogenliga.application.business.match.api.MatchComponent;
@@ -22,24 +22,23 @@ import de.bogenliga.application.common.errorhandling.exception.BusinessException
 import de.bogenliga.application.common.errorhandling.exception.TechnicalException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import java.security.SecureRandom;
+import java.util.Base64;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
 /**
  * Core implementation of the Tablet Schusszettel workflow.
- *
  * Use Case Overview:
  * 1) GET /api/tablet-schusszettel?token=...&wettkampfid=...&teamid=...
  *    - Liefert aktuellen Status (NOT_ALLOWED, SCHUETZENMELDUNG, SATZEINGABE, WARTE, WETTKAMPF_ENDE)
  *    - Abhängig vom Zustand werden sämtliche Daten für alle Sätze zurückgegeben,
  *      inkl. Schützenlisten, Satz-Ergebnisse, Match-Ergebnisse, verfügbare Schützen.
- *
  * 2) POST /api/tablet-schusszettel?token=...
  *    - Typ SCHUETZENMELDUNG: gemeldete_schuetzen -> Registrierung
  *    - Typ SATZEINGABE: satzeingabe -> Schussdaten erfassen
  *    - Automatische Statuswechsel nach Regeln in advanceToNextMatchOrEnd() und im GET-Handler.
- *
  * State Machine:
  * NOT_ALLOWED -> (ungültiger Token) remains NOT_ALLOWED
  * SCHUETZENMELDUNG -> (nach POST Registrierung) SATZEINGABE
@@ -47,6 +46,7 @@ import java.util.stream.Collectors;
  * WARTE -> (Gegner auch WARTE & Match beendet) SCHUETZENMELDUNG oder WETTKAMPF_ENDE
  * WARTE -> (Gegner nicht fertig) SATZEINGABE
  * WETTKAMPF_ENDE -> Endzustand
+ * @author Marty Lauterbach
  */
 @Service
 public class TabletSchusszettelComponentImpl implements TabletSchusszettelComponent {
@@ -62,7 +62,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     private static final String STATUS_WETTKAMPF_ENDE  = "WETTKAMPF_ENDE";
 
     // Injected business components / DAOs
-    private final TabletSessionDAO            sessionDAO;
+    private final TabletSchusszettelDAO            sessionDAO;
     private final PasseComponent              passeComponent;
     private final MatchComponent              matchComponent;
     private final MannschaftsmitgliedComponent mmComponent;
@@ -70,9 +70,11 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     private final DsbMannschaftComponent      mannschaftComponent;
     private final VereinComponent             vereinComponent;
 
+    private static final SecureRandom SECURE_RANDOM = new SecureRandom();
+
     @Autowired
     public TabletSchusszettelComponentImpl(
-            TabletSessionDAO sessionDAO,
+            TabletSchusszettelDAO sessionDAO,
             PasseComponent passeComponent,
             MatchComponent matchComponent,
             MannschaftsmitgliedComponent mmComponent,
@@ -97,6 +99,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
      *    - SATZEINGABE: bereits gemeldete Schützen + verbleibende
      *    - WARTE: ggf. Statuswechsel, sonst Ansicht wie SATZEINGABE
      *    - WETTKAMPF_ENDE: Finale Zusammenfassung
+     * @author Marty Lauterbach
      */
     @Override
     public TabletSchusszettelDO getStatus(long wettkampfId, long teamId, String token) {
@@ -105,7 +108,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
             return notAllowed();
         }
         // 2) Lookup session, return NOT_ALLOWED if none
-        TabletSessionEntity session = sessionDAO.findByToken(wettkampfId, teamId, token)
+        TabletSchusszettelEntity session = sessionDAO.findByToken(wettkampfId, teamId, token)
                 .orElse(null);
         if (session == null) {
             return notAllowed();
@@ -114,8 +117,10 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
         // Extract match and opponent IDs
         long matchId = session.getCurrentMatchId();
         long oppTeam = session.getGegnerTeamId();
+
         // Fetch all recorded passes for this match
         List<PasseDO> passen = passeComponent.findByMatchId(matchId);
+
         // Build full set history (Satz-Ergebnisse)
         List<SatzErgebnisDO> satzHistory = buildSatzErgebnisse(passen, teamId, oppTeam, Integer.MAX_VALUE);
 
@@ -124,14 +129,13 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
         result.setStatus(TabletSchusszettelDO.TabletSchusszettelStatus.valueOf(session.getStatus()));
         result.setEigenesTeam(getTeamInfo(teamId));
         result.setGegnerischesTeam(getTeamInfo(oppTeam));
-
-        // Call to TabletSessionDAO
-        TabletSessionDAO.setCurrentMatchId(wettkampfId, teamId, matchId);
-        TabletSessionDAO.setCurrentPasseNumber(wettkampfId, teamId, session.getCurrentPasseNumber());
-
         result.setSatzErgebnisse(satzHistory);
         result.setSchuetzenMatchPunkte(buildMatchPunkte(passen, teamId));
         result.setMatchErgebnis(buildTeamMatchInfo(satzHistory, teamId, oppTeam));
+
+        // Call to TabletSessionDAO | Marty: Unnecessary call from a get class that infringes into setting database entry status - Why?
+        // TabletSessionDAO.setCurrentMatchId(wettkampfId, teamId, matchId);
+        // TabletSessionDAO.setCurrentPasseNumber(wettkampfId, teamId, session.getCurrentPasseNumber());
 
         // Append additional data depending on session state
         switch (session.getStatus()) {
@@ -142,6 +146,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                 handleSatzeingabe(session, result);
                 break;
             case STATUS_WARTE:
+                // In this status, a get call CAN change status logic!
                 handleWarte(session, result, wettkampfId, teamId);
                 break;
             case STATUS_WETTKAMPF_ENDE:
@@ -168,75 +173,92 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
      * - Mitgliedschaft validieren
      * - Reservation durch leere Passen erzeugen
      * - Statuswechsel -> SATZEINGABE
+     * @author Marty Lauterbach
      */
     @Override
-    public void submitSchuetzen(long wettkampfId, long teamId, String token, SchuetzenMeldungDO input) {
-        // Validate payload
+    public void submitSchuetzen(long wettkampfId,
+                                long teamId,
+                                String token,
+                                SchuetzenMeldungDO input) {
+
+        // 1) Token presence / emptiness check
+        if (token == null || token.isEmpty()) {
+            throw new BusinessException(
+                    ErrorCode.NO_PERMISSION_ERROR,
+                    "Token argument is empty");
+        }
+
+        // 2) Lookup session, return NOT_ALLOWED if none
+        TabletSchusszettelEntity session = sessionDAO
+                .findByToken(wettkampfId, teamId, token)
+                .orElseThrow(() ->
+                        new BusinessException(
+                                ErrorCode.NO_PERMISSION_ERROR,
+                                "Invalid or expired token"));
+
+        // 3) Validate payload: exactly 3 shooters
         if (input == null
                 || input.getGemeldeteSchuetzen() == null
                 || input.getGemeldeteSchuetzen().size() != SHOOTERS_PER_TEAM) {
+
             throw new BusinessException(
                     ErrorCode.INVALID_ARGUMENT_ERROR,
-                    "Exactly 3 shooters must be selected");
+                    "Exactly " + SHOOTERS_PER_TEAM + " shooters must be selected");
         }
 
-        // Registrierungsschritte für jeden Schützen
-        TabletSessionEntity session = sessionDAO.findByToken(wettkampfId, teamId, token)
-                .orElseThrow(() -> new BusinessException(
-                        ErrorCode.NO_PERMISSION_ERROR,
-                        "Invalid or expired token"));
-
-        // Register each shooter
+        // 4) For each shooter: check membership, then reserve 5 empty passes
+        final int PASSES_PER_SHOOTER = 5;
         for (Long dsbId : input.getGemeldeteSchuetzen()) {
-            // Membership check via component
+
+            // 4a) Membership check via component
             if (mmComponent.findByMemberAndTeamId(teamId, dsbId) == null) {
                 throw new BusinessException(
                         ErrorCode.NO_PERMISSION_ERROR,
                         "Shooter " + dsbId + " is not on team " + teamId);
             }
-            /*
-            public PasseDO(
-                Long id,
-                Long passeMannschaftId,
-                Long passeWettkampfId,
-                Long passeMatchNr,
-                Long passeMatchId,
-                Long passeLfdnr,
-                Long passeDsbMitgliedId,
-                Integer pfeil1,
-                Integer pfeil2,
-                Integer pfeil3,
-                Integer pfeil4,
-                Integer pfeil5,
-                Integer pfeil6
-            )
-             */
-            // Passen-Reservation ohne Werte
-            PasseDO passe = new PasseDO(
-                    session.getCurrentPasseNumber(),
-                    teamId,
-                    wettkampfId,
-                    session.getCurrentMatchNumber(),
-                    session.getCurrentMatchId(),
-                    session.getLfdnr(),
-                    dsbId,
-                    null, null, null, null, null, null);
-            passeComponent.create(passe, /*userId*/ -1L);
+
+            // 4b) Reserve empty Passen (lfdnr = 1..5) for this shooter
+            for (long lfdnr = 1; lfdnr <= PASSES_PER_SHOOTER; lfdnr++) {
+                PasseDO passe = new PasseDO(
+                        /* id:            */ null,                   // let the DB generate it
+                        /* teamId:        */ teamId,                 // passeMannschaftId
+                        /* wettkampfId:   */ wettkampfId,            // passeWettkampfId
+                        /* matchNr:       */ session.getCurrentMatchNumber(),
+                        /* matchId:       */ session.getCurrentMatchId(),
+                        /* lfdnr:         */ lfdnr,                  // this pass’s sequence # (1–5)
+                        /* dsbMitgliedId: */ dsbId,                  // which shooter
+                        /* pfeil1–6:      */ null, null, null, null, null, null
+                );
+                passeComponent.create(passe, /*userId*/ -1L);
+            }
         }
-        // Wechsel in Eingabemodus
+
+        // 5) Switch session into Satz-Eingabe mode
         session.setStatus(STATUS_SATZEINGABE);
-        session.setCurrentPasseNumber(1);
-        sessionDAO.updateStatus(session, -1L);
+        sessionDAO.updateStatus(session, /*userId*/ -1L);
     }
 
     /**
      * POST-Handler: Satzeingabe
      * - Schussdaten speichern
      * - Prüfen, ob beide Teams fertig -> ggf. Satz-, Match- oder Tag beenden
+     * @author Marty Lauterbach
      */
     @Override
     public void submitSatz(long wettkampfId, long teamId, String token, SatzEingabeDO eingabe) {
-        // Validate payload
+        // 1) Token presence / emptiness check
+        if (token == null || token.isEmpty()) {
+            throw new BusinessException(
+                    ErrorCode.NO_PERMISSION_ERROR,
+                    "Token argument is empty");
+        }
+        // 2) Lookup session, return NOT_ALLOWED if none
+        TabletSchusszettelEntity session = sessionDAO.findByToken(wettkampfId, teamId, token)
+                .orElseThrow(() -> new BusinessException(
+                        ErrorCode.NO_PERMISSION_ERROR,
+                        "Invalid or expired token"));
+
+        // 3) Validate payload
         if (eingabe == null || eingabe.getSatzeingabe() == null
                 || eingabe.getSatzeingabe().size() != SHOOTERS_PER_TEAM) {
             throw new BusinessException(
@@ -244,32 +266,59 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                     "Three shooters’ scores required");
         }
 
-        // Retrieve session
-        TabletSessionEntity session = sessionDAO.findByToken(wettkampfId, teamId, token)
-                .orElseThrow(() -> new BusinessException(
-                        ErrorCode.NO_PERMISSION_ERROR,
-                        "Invalid or expired token"));
-
+        // 4) Extract match and opponent IDs
         long matchId = session.getCurrentMatchId();
         long passeNr = session.getCurrentPasseNumber();
 
-        // Speichere jede Passe mit drei Pfeilwerten
+        // 5) Speichere für jeden Schützen in seiner passenden Passe seine Schüsse
         for (SchuetzenSatzDO s : eingabe.getSatzeingabe()) {
-            PasseDO passe = new PasseDO(
-                    null, teamId, wettkampfId,
-                    session.getCurrentMatchNumber(), matchId,
-                    passeNr, s.getSchuetzenId(),
-                    s.getSchuss1(), s.getSchuss2(), s.getSchuss3(),
-                    0, 0);
-            passeComponent.create(passe, /*userId*/ -1L);
+            try {
+                // Suche bestehende Passe
+                Optional<PasseDO> existingPasse = passeComponent.findByMatchId(matchId).stream()
+                        .filter(p -> p.getPasseMannschaftId() == teamId
+                                && p.getPasseLfdnr() == passeNr
+                                && Objects.equals(p.getPasseDsbMitgliedId(), s.getSchuetzenId()))
+                        .findFirst();
+
+                if (existingPasse.isPresent()) {
+                    // Update vorhandene Passe
+                    PasseDO passe = existingPasse.get();
+                    passe.setPfeil1(s.getSchuss1());
+                    passe.setPfeil2(s.getSchuss2());
+                    passe.setPfeil3(s.getSchuss3());
+                    passeComponent.update(passe, /*userId*/ -1L);
+                } else {
+                    // Erstelle neue Passe
+                    PasseDO passe = new PasseDO(
+                            null,
+                            teamId,
+                            wettkampfId,
+                            session.getCurrentMatchNumber(),
+                            matchId,
+                            passeNr,
+                            s.getSchuetzenId(),
+                            s.getSchuss1(),
+                            s.getSchuss2(),
+                            0,
+                            0,
+                            0,
+                            0);
+                    passeComponent.create(passe, /*userId*/ -1L);
+                }
+            } catch (Exception e) {
+                throw new TechnicalException(
+                        ErrorCode.INTERNAL_ERROR,
+                        "Fehler beim Speichern der Passe für Schütze " + s.getSchuetzenId() + ": " + e.getMessage());
+            }
         }
 
-        // Zähle eigene und gegnerische Einträge in dieser Passe
+        // 6) Zähle eigene und gegnerische Einträge in dieser Passe
         long ownCount = passeComponent.findByMatchId(matchId).stream()
                 .filter(p -> p.getPasseMannschaftId() == teamId && p.getPasseLfdnr() == passeNr)
                 .count();
         long oppCount = passeComponent.findByMatchId(matchId).stream()
-                .filter(p -> p.getPasseMannschaftId() == session.getGegnerTeamId() && p.getPasseLfdnr() == passeNr)
+                .filter(p -> Objects.equals(p.getPasseMannschaftId(), session.getGegnerTeamId())
+                        && p.getPasseLfdnr() == passeNr)
                 .count();
 
         if (ownCount == SHOOTERS_PER_TEAM && oppCount == SHOOTERS_PER_TEAM) {
@@ -278,11 +327,9 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                     passeComponent.findByMatchId(matchId),
                     teamId, session.getGegnerTeamId(), Integer.MAX_VALUE);
             if (isMatchComplete(fullHistory)) {
-                // Match abgeschlossen
                 advanceToNextMatchOrEnd(wettkampfId, session);
             } else {
-                // Weiterer Satz
-                session.setCurrentPasseNumber((int) passeNr + 1);
+                session.setCurrentPasseNumber((int) (passeNr + 1));
                 session.setStatus(STATUS_SATZEINGABE);
                 sessionDAO.updateStatus(session, -1L);
             }
@@ -294,28 +341,77 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     }
 
     /**
-     * Initialize sessions at start of competition day for a team
+     * Erzeuge Sessions für alle Teams des Wettkampfs
+     * @author Marty Lauterbach
      */
     @Override
-    public void initializeForWettkampf(long wettkampfId, long teamId) {
-        // Sitzungen initialisieren: erster Match, Passe=1, Schuetzenmeldung
-        List<MatchDO> teamMatches = matchComponent.findByWettkampfId(wettkampfId).stream()
-                .filter(m -> m.getMannschaftId() == teamId)
-                .sorted(Comparator.comparingLong(MatchDO::getNr))
-                .collect(Collectors.toList());
-        if (teamMatches.isEmpty()) {
-            throw new BusinessException(
-                    ErrorCode.ENTITY_NOT_FOUND_ERROR,
-                    "No matches for team " + teamId);
+    public void initializeForWettkampf(long wettkampfId) {
+        try {
+            // 1) Lösche alte Sessions, damit Neu­starts idempotent sind
+            sessionDAO.deleteByWettkampfId(wettkampfId);
+
+            // 2) Lade alle Matches
+            List<MatchDO> allMatches = matchComponent.findByWettkampfId(wettkampfId);
+            if (allMatches.isEmpty()) {
+                throw new BusinessException(
+                        ErrorCode.ENTITY_NOT_FOUND_ERROR,
+                        "No matches found for wettkampf " + wettkampfId);
+            }
+
+            // 3) Unique team IDs
+            Set<Long> teamIds = allMatches.stream()
+                    .map(MatchDO::getMannschaftId)
+                    .collect(Collectors.toSet());
+
+            for (Long teamId : teamIds) {
+                // 4) matches for this team, sorted
+                List<MatchDO> teamMatches = allMatches.stream()
+                        .filter(m -> Objects.equals(m.getMannschaftId(), teamId))
+                        .sorted(Comparator.comparingLong(MatchDO::getNr))
+                        .toList();
+
+                if (teamMatches.isEmpty()) {
+                    throw new BusinessException(
+                            ErrorCode.ENTITY_NOT_FOUND_ERROR,
+                            "No matches for team " + teamId);
+                }
+
+                MatchDO firstMatch = teamMatches.get(0);
+                long opponentId = findOpponentTeamId(firstMatch, teamId);
+
+                TabletSchusszettelEntity session = new TabletSchusszettelEntity();
+                session.setWettkampfId(wettkampfId);
+                session.setTeamId(teamId);
+                session.setCurrentMatchId(firstMatch.getId());
+                session.setCurrentMatchNumber(Math.toIntExact(firstMatch.getNr()));
+                session.setCurrentPasseNumber(1);
+                session.setStatus(STATUS_SCHUETZENMELDUNG);
+                session.setGegnerTeamId(opponentId);
+
+                // 5) shorter, URL-safe random token
+                session.setToken(generateUrlSafeToken());
+
+                sessionDAO.createSession(session, -1L);
+            }
+
+        } catch (BusinessException be) {
+            throw be;
+        } catch (Exception e) {
+            throw new TechnicalException(
+                    ErrorCode.INTERNAL_ERROR,
+                    "initializeForWettkampf failed for wettkampf "
+                            + wettkampfId + ": " + e.getMessage());
         }
-        TabletSessionEntity session = new TabletSessionEntity();
-        session.setWettkampfId(wettkampfId);
-        session.setTeamId(teamId);
-        session.setCurrentMatchId(teamMatches.get(0).getId());
-        session.setCurrentPasseNumber(1);
-        session.setStatus(STATUS_SCHUETZENMELDUNG);
-        session.setGegnerTeamId(findOpponentTeamId(teamMatches.get(0), teamId));
-        sessionDAO.createSession(session, -1L);
+    }
+
+    /**
+     * 16-byte URL-safe token, no padding
+     * @author Marty Lauterbach
+     */
+    private String generateUrlSafeToken() {
+        byte[] buf = new byte[16];
+        SECURE_RANDOM.nextBytes(buf);
+        return Base64.getUrlEncoder().withoutPadding().encodeToString(buf);
     }
 
     @Override
@@ -335,7 +431,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     /**
      * SCHUETZENMELDUNG: verfügbar machen aller Vereins-Schützen
      */
-    private void handleSchuetzenmeldung(TabletSessionEntity session,
+    private void handleSchuetzenmeldung(TabletSchusszettelEntity session,
                                         TabletSchusszettelDO out,
                                         long teamId) {
         List<MannschaftsmitgliedDO> members = mmComponent.findByTeamId(teamId);
@@ -350,19 +446,22 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     /**
      * SATZEINGABE: bereits registrierte Schützen + verbleibende zum Auswählen
      */
-    private void handleSatzeingabe(TabletSessionEntity session, TabletSchusszettelDO out) {
+    private void handleSatzeingabe(TabletSchusszettelEntity session, TabletSchusszettelDO out) {
         long passeNr = session.getCurrentPasseNumber();
         long matchId = session.getCurrentMatchId();
+
         List<PasseDO> assigns = passeComponent.findByMatchId(matchId).stream()
                 .filter(p -> p.getPasseLfdnr() == passeNr)
-                .collect(Collectors.toList());
+                .toList();
+
         // Stammdaten der gemeldeten Schützen
         List<SchuetzeStammdatenDO> meta = assigns.stream().map(p -> {
             DsbMitgliedDO dm = mitgliedComponent.findById(p.getPasseDsbMitgliedId());
             MannschaftsmitgliedDO mm = mmComponent.findByMemberAndTeamId(session.getTeamId(), p.getPasseDsbMitgliedId());
-            return new SchuetzeStammdatenDO(dm.getId(), mm.getRueckennummer(), dm.getVorname(), dm.getNachname());
+            return new SchuetzeStammdatenDO(dm.getId(), Math.toIntExact(mm.getRueckennummer()), dm.getVorname(), dm.getNachname());
         }).collect(Collectors.toList());
         out.setSchuetzeStammDaten(meta);
+
         // Verbleibende Schützen
         Set<Long> used = assigns.stream()
                 .map(PasseDO::getPasseDsbMitgliedId).collect(Collectors.toSet());
@@ -379,18 +478,23 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     /**
      * WARTE: Gegner-Status prüfen -> ggf. neue Phase starten oder Eingabeansicht erneut
      */
-    private void handleWarte(TabletSessionEntity session,
+    private void handleWarte(TabletSchusszettelEntity session,
                              TabletSchusszettelDO out,
                              long wettkampfId,
                              long teamId) {
-        Optional<TabletSessionEntity> oppSession = sessionDAO.findByWettkampfUndTeam(
+
+        Optional<TabletSchusszettelEntity> oppSession = sessionDAO.findByWettkampfUndTeam(
                 wettkampfId, session.getGegnerTeamId());
+
         boolean opponentWaiting = oppSession.isPresent() && STATUS_WARTE.equals(oppSession.get().getStatus());
+
         if (opponentWaiting) {
+
             // Beide Teams fertig -> prüfen Match-Ende
             List<SatzErgebnisDO> full = buildSatzErgebnisse(
                     passeComponent.findByMatchId(session.getCurrentMatchId()),
                     teamId, session.getGegnerTeamId(), Integer.MAX_VALUE);
+
             if (isMatchComplete(full)) {
                 // Match beendet -> nächste Registrierung oder Wettkampf-Ende
                 advanceToNextMatchOrEnd(wettkampfId, session);
@@ -404,19 +508,21 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                 out.setStatus(TabletSchusszettelDO.TabletSchusszettelStatus.SATZEINGABE);
                 handleSatzeingabe(session, out);
             }
+
         } else {
-            // Warten noch -> Anzeige SATZEINGABE
-            handleSatzeingabe(session, out);
+            // Warten noch -> WARTE WEITER
         }
+
     }
 
     /**
      * WETTKAMPF_ENDE: Aufräumen und finale Recaps zeigen
      */
-    private void handleEnde(TabletSessionEntity session,
+    private void handleEnde(TabletSchusszettelEntity session,
                             TabletSchusszettelDO out,
                             long wettkampfId,
                             long teamId) {
+
         out.setSatzErgebnisse(Collections.emptyList());
         out.setSchuetzenMatchPunkte(Collections.emptyList());
         out.setSchuetzeStammDaten(Collections.emptyList());
@@ -432,6 +538,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                             teamId, opp).stream();
                 }).collect(Collectors.toList());
         out.setMatchErgebnis(recap);
+
     }
 
     /**
@@ -439,12 +546,12 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
      */
     private long findOpponentTeamId(MatchDO m, long own) {
         return matchComponent.findByWettkampfId(m.getWettkampfId()).stream()
-                .filter(o -> o.getNr() == m.getNr()
-                        && o.getBegegnung() == m.getBegegnung()
-                        && o.getMannschaftId() != own)
+                .filter(o -> Objects.equals(o.getNr(), m.getNr())
+                        && Objects.equals(o.getBegegnung(), m.getBegegnung())
+                        && !Objects.equals(o.getMannschaftId(), own))
                 .findFirst()
                 .map(MatchDO::getMannschaftId)
-                .orElseThrow(() -> new TechnicalException(
+                .orElseThrow(() -> new BusinessException(
                         ErrorCode.INTERNAL_ERROR,
                         "Opponent not found for match " + m.getId()));
     }
@@ -474,7 +581,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
                 .entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
                 .map(e -> {
-                    int set = (long) e.getKey();
+                    int set = Math.toIntExact(e.getKey());
                     int sum1 = e.getValue().stream()
                             .filter(p -> p.getPasseMannschaftId() == t1)
                             .mapToInt(p -> p.getPfeil1() + p.getPfeil2() + p.getPfeil3())
@@ -519,7 +626,7 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
 
 
     private String getTeamName(long teamId) {
-        VereinDO verein = findById(teamId);
+        VereinDO verein = vereinComponent.findById(teamId);
         return verein.getName();
     }
 
@@ -537,18 +644,25 @@ public class TabletSchusszettelComponentImpl implements TabletSchusszettelCompon
     /**
      * Advance to next match or end of day state
      */
-    private void advanceToNextMatchOrEnd(long wettkampfId, TabletSessionEntity session) {
+    private void advanceToNextMatchOrEnd(long wettkampfId, TabletSchusszettelEntity session) {
         // Find all team matches ordered
         List<MatchDO> teamMatches = matchComponent.findByWettkampfId(wettkampfId).stream()
-                .filter(m -> m.getMannschaftId() == session.getTeamId())
+                .filter(m -> Objects.equals(m.getMannschaftId(), session.getTeamId()))
                 .sorted(Comparator.comparingLong(MatchDO::getNr))
-                .collect(Collectors.toList());
+                .toList();
         int idx = teamMatches.indexOf(
-                teamMatches.stream() .filter(m -> m.getId() == session.getCurrentMatchId()).findFirst().get());
+                teamMatches.stream() .filter(m -> Objects.equals(m.getId(), session.getCurrentMatchId())).findFirst().get());
         if (idx + 1 < teamMatches.size()) {
             MatchDO next = teamMatches.get(idx + 1);
             session.setCurrentMatchId(next.getId());
             session.setCurrentPasseNumber(1);
+
+            // set enemy team id
+            // 1) create MatchDO
+            MatchDO match = matchComponent.findById(next.getId());
+            // 2) find enemy team id and set It to current Session
+            session.setGegnerTeamId(findOpponentTeamId(match, session.getTeamId()));
+
             session.setStatus(STATUS_SCHUETZENMELDUNG);
         } else {
             session.setStatus(STATUS_WETTKAMPF_ENDE);
